[package]
name = "hyena"
version = "0.1.0"
authors = ["Przemyslaw M. Maciolek <pmm@collective-sense.com>"]

[dependencies]
rand = "0.3"
serde = "1.0.6"
serde_derive = "1.0.6"
bincode = "0.8.0"
nanomsg = "0.6.2"
tokio-core = "0.1.6"

#[dependencies.nanomsg-tokio]
#optional = false
#git = "ssh://git@github.com/FCG-LLC/nanomsg-tokio.git"
